Fix alignment of eye icon in Login form

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -114,14 +114,13 @@
 }
 
 input {
-  margin: 0 auto;
   opacity: 0.5;
   color: black;
   margin-top: 10px;
   width: 300px;
   height: 59px;
   font-size: 16px;
-  margin-bottom: 14px;
+  margin-bottom: 14px !important;
   max-width: 527px;
   padding: 0 10%;
 }
