--- a/client/src/components/RegisterForm/RegisterForm.scss
+++ b/client/src/components/RegisterForm/RegisterForm.scss
@@ -38,7 +38,6 @@ body {
   .form-group {
     display: flex;
     flex-direction: column;
-    margin-bottom: 1rem;
     width: 100%;
     position: relative;
   }
